/*================================================================
*     Copyright (c) 2015年 lanhu. All rights reserved.
*   
*   文件名称：DepartAction.h
*   创 建 者：jiangzhicheng
*   邮    箱：bluefoxah@gmail.com
*   创建日期：2015年04月21日
*   描    述：
*
#pragma once
================================================================*/
#ifndef __COMPANYACTION_H__
#define __COMPANYACTION_H__
#include "ImPduBase.h"

namespace DB_PROXY {

	void getCompanyInfo(CImPdu* pPdu, uint32_t conn_uuid);
};


#endif /*defined(__DEPARTACTION_H__) */
